Overflow fix

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   margin: 50px auto;
   box-shadow: 8px 8px 20px rgba(0,0,0,0.3);
   position: relative; 
-  overflow: hidden;
+  overflow: visible;
   perspective: 2000px; 
 
 }
@@ -35,7 +35,7 @@
 .cover.open {
 
   transform: rotateY(-180deg);
-  
+
 }
 
 .cover .back {
